--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,73 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<!-- container for orange background -->
+<div container>
+<!-- navigation bar -->
+
+<!-- avatar -->
+<img class="avatar" alt="avatar" src="https://kitt.lewagon.com/placeholder/users/cveneziani" />
+
+
+<!-- title -->
+
+<h1>Hello, user_name!<h1>
+<h2>Where would you like to go</h2>
+
+<!-- filtering and searchbox -->
+
+  <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Dropdown button
+  </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <a class="dropdown-item" href="#">Near-by</a>
+      <a class="dropdown-item" href="#">Another </a>
+    </div>
+  </div>
+
+  <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
+  <div class="search-form-control form-group">
+    <input class="form-control string required" type="text" name="search[query]" id="search_query" />
+    <button name="button" type="submit" class="btn btn-flat">
+      <i class="fas fa-search"></i> Search
+    </button>
+  </div>
+  </form>
+
+<!-- container end, apply border-radius to bottom onl -->
+</div>
+<!-- filter tabs -->
+<div class="filter-tabs">
+  <ul class="list-inline tabs-underlined">
+    <li>
+      <a href="#" class="tab-underlined active">Popular</a>
+    </li>
+    <li>
+      <a href="#" class="tab-underlined">Recommended</a>
+    </li>
+    <li>
+      <a href="#" class="tab-underlined">Promotions</a>
+    </li>
+  </ul>
+
+<!-- cards -->
+  <!-- iterate through venue cards with events -->
+  <div class="card-trip">
+    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+    <div class="scroll-right-button">
+       <a class="btn btn-flat" href="#">→</a>
+    <div class="card-trip-infos">
+      <div>
+        <h2>Craftsmen Cafe</h2>
+        <p>Best coffee shop</p>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star checked"></span>
+        <span class="fa fa-star"></span>
+        <span class="fa fa-star"></span>
+      </div>
+      <!-- iterate through users who are logged in -->
+      <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+    </div>
+  </div>
+<!--navigation right button -->
+
