--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 <!-- container for orange background -->
-<div container>
+<div header-container>
 <!-- navigation bar -->
 
 <!-- avatar -->
@@ -24,14 +24,16 @@
     </div>
   </div>
 
-  <form novalidate="novalidate" class="simple_form search" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
-  <div class="search-form-control form-group">
-    <input class="form-control string required" type="text" name="search[query]" id="search_query" />
-    <button name="button" type="submit" class="btn btn-flat">
-      <i class="fas fa-search"></i> Search
-    </button>
+  <div class="search-box">
+    <%= simple_form_for :search, url: s_path, method: "GET", html: { class: '' } do |f| %>
+        <div class="search_bar d-flex  align-items-center input_area text-align-center pr-2">
+            <div class="name flex-grow-1">
+            <%= f.input :name, input_html: {value: ""}, :placeholder => "search" , :label => false, input_html: { class: 'name_input mt-3' } %>
+            </div>
+            <%= f.submit "🔎", class: "search_bar_btn ml-3" %>
+        </div>
+    <% end %>
   </div>
-  </form>
 
 <!-- container end, apply border-radius to bottom onl -->
 </div>
@@ -51,23 +53,27 @@
 
 <!-- cards -->
   <!-- iterate through venue cards with events -->
-  <div class="card-trip">
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-    <div class="scroll-right-button">
-       <a class="btn btn-flat" href="#">→</a>
-    <div class="card-trip-infos">
-      <div>
-        <h2>Craftsmen Cafe</h2>
-        <p>Best coffee shop</p>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
-      </div>
-      <!-- iterate through users who are logged in -->
-      <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+<div class="container mt-3 venue-section">
+  <div class="row">
+    <div class="card-trip">
+        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+        <div class="scroll-right-button">
+        <a class="btn btn-flat" href="#">→</a>
+        <div class="card-trip-infos">
+        <div>
+            <h2>Craftsmen Cafe</h2>
+            <p>Best coffee shop</p>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star"></span>
+            <span class="fa fa-star"></span>
+        </div>
+        <!-- iterate through users who are logged in -->
+        <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+        </div>
     </div>
   </div>
+</div>
 <!--navigation right button -->
 
