--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,1 +1,7 @@
-<h1><%= @venue.name %></h1>
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%=cl_image_path @venue.photos[0].key %>)">
+  <h2><%= @venue.name %></h2>
+  <p><%= @venue.description%></p>
+  <p>Event.raitings goes here</p>
+  <p>Live event box, music, timeleft</p>
+</div>
+
