--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -5,7 +5,6 @@
 </div>
 
 
-
 <!-- container for orange background -->
 
 <div header-container>
@@ -17,7 +16,7 @@
 
 <!-- title -->
 
-<h1>Hello, user_name!<h1>
+<h1>Hello, John !<h1>
 <h2>Where would you like to go</h2>
 
 <!-- filtering and searchbox -->
@@ -32,44 +31,6 @@
     </div>
   </div>
 
-<!-- container end, apply border-radius to bottom onl -->
-</div>
-<!-- filter tabs -->
-<div class="filter-tabs">
-  <ul class="list-inline tabs-underlined">
-    <li>
-      <a href="#" class="tab-underlined active">Popular</a>
-    </li>
-    <li>
-      <a href="#" class="tab-underlined">Recommended</a>
-    </li>
-    <li>
-      <a href="#" class="tab-underlined">Promotions</a>
-    </li>
-  </ul>
-
-<!-- cards -->
-  <!-- iterate through venue cards with events -->
-  <div class="card-trip">
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-    <div class="scroll-right-button">
-       <a class="btn btn-flat" href="#">→</a>
-    <div class="card-trip-infos">
-      <div>
-        <h2>Craftsmen Cafe</h2>
-        <p>Best coffee shop</p>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star"></span>
-        <span class="fa fa-star"></span>
-      </div>
-      <!-- iterate through users who are logged in -->
-      <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
-    </div>
-  </div>
-<!--navigation right button -->
-=======
 <!-- container end, apply border-radius to bottom onl -->
 </div>
 <!-- filter tabs -->
@@ -96,7 +57,7 @@
             <div class="event-card">
                 <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
                 <div class="card-trip-infos">
-                <h2><%= venue.events.first.name %></h2>
+                <h2><%= venue.events.name %></h2>
                 <h3><%= venue.name %></h3>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
@@ -115,6 +76,8 @@
 </div>
 <!--stars, in ratings controller add methods to calculate/round full,empty stars from the ratings of the user -->
 <!-- avatar, in livefeed controller add method to get users currently live, iterate and call .each on them in view  -->
+
+
 
 
 
