--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,10 @@
 
+<div class="container mt-5">
+  <%= simple_form_for :search, method: "GET" do |f| %>
+    <%= f.input :address, as: :string, type: :text, :placeholder => "Type here", :label => false %>
+  <% end %>
+</div>
+
 <!-- container for orange background -->
 
 <div header-container>
