update search bar method

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <%= simple_form_for :search, method: "GET" do |f| %>
-    <%= f.input :address, as: :string, type: :text, :placeholder => "Type here", :label => false %>
+    <%= f.input :category, as: :string, type: :text, :placeholder => "Type here", :label => false %>
   <% end %>
 </div>
 
