--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -33,21 +33,6 @@
 
 <!-- container end, apply border-radius to bottom onl -->
 </div>
-<!-- filter tabs -->
-<div class="container mt-3 tabs-and-event-cards">
-    <div class="filter-tabs">
-    <ul class="list-inline tabs-underlined">
-        <li>
-        <a href="#" class="tab-underlined active">Venues</a>
-        </li>
-        <li>
-        <a href="#" class="tab-underlined">Events</a>
-        </li>
-        <li>
-        <a href="#" class="tab-underlined">Promotions</a>
-        </li>
-    </ul>
-    </div>
 
 <!-- cards -->
   <!-- iterate through venue cards with events -->
@@ -57,14 +42,18 @@
             <div class="event-card">
                 <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
                 <div class="card-trip-infos">
-                <h2><%= venue.events.name %></h2>
+                <h2><%= venue.events.first.name %></h2>
                 <h3><%= venue.name %></h3>
+                <!--star ratings -->
+                <% full_stars = venue.events.first.total_rating.round %>
+                <% empty_stars = 5 - full_stars %>
+                <% full_stars.times do %>
                 <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
+                <% end %>
+                <% empty_stars.times do %>
                 <span class="fa fa-star"></span>
-                <span class="fa fa-star"></span>
-                </div>
+                <% end %>
+               
                 <!-- iterate through users who are logged in -->
                 <div class="users-online">
                 <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
