--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -40,9 +40,9 @@
         <div class="row">
           <% @venues.each do |venue|%>
             <div class="event-card">
-                <%#= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
+                <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
                 <div class="card-trip-infos">
-                <h2><%= venue.events.first.name %></h2>
+                <h2><%= venue.events.last.name %></h2>
                 <h3><%= venue.name %></h3>
                 <!--star ratings -->
                 <% full_stars = venue.events.last.average_rating.round %>
@@ -53,6 +53,7 @@
                 <% empty_stars.times do %>
                   <i class="far fa-star"></i>
                 <% end %>
+                 (<%= venue.events.last.ratings.count %>)
                
                 <!-- iterate through users who are logged in -->
                 <div class="users-online">
