--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -3,4 +3,5 @@
   <p><%= @venue.description%></p>
   <p>Event.raitings goes here</p>
   <p>Live event box, music, timeleft</p>
+  <a href="https://api.deezer.com/oembed?url=http://www.deezer.com/track/3135556"></a>
 </div>
