--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -32,8 +32,6 @@
           <a class="dropdown-item" href="#">Another </a>
         </div>
       </div>
-
-<<<<<<< HEAD
     <!-- container end, apply border-radius to bottom onl -->
     </div>
     <!-- filter tabs -->
@@ -51,32 +49,6 @@
             </li>
         </ul>
         </div>
-
-    <!-- cards -->
-      <!-- iterate through venue cards with events -->
-        <div class="container mt-3 venue-section">
-            <div class="row">
-              <% @venues.each do |venue|%>
-                <div class="event-card">
-                    <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
-                    <div class="card-trip-infos">
-                    <h2><%= venue.events.name %></h2>
-                    <h3><%= venue.name %></h3>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                    </div>
-                    <!-- iterate through users who are logged in -->
-                    <div class="users-online">
-                    <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
-                    </div>
-                </div>
-              <% end %>
-=======
-<!-- container end, apply border-radius to bottom onl -->
-</div>
 
 <!-- cards -->
   <!-- iterate through venue cards with events -->
@@ -99,10 +71,6 @@
                   <i class="far fa-star"></i>
                 <% end %>
                  (<%= venue.events.last.ratings.count %>)
-<<<<<<< HEAD
-
-=======
->>>>>>> 6350310e26ad9a9d011ff1f4c57476877fd09d2e
                 <!-- iterate through users who are logged in -->
               <% elsif venue.events.nil? %>
                 <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
@@ -110,38 +78,52 @@
                 <p>no event at the moment</p>
                 </div>
               <% end %>
-              
+            <% end %>
+
               <div class="users-online">
                 <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
               </div>
->>>>>>> master
             </div>
         </div>
     </div>
   </div>
 <% else %>
-        <div class="container mt-3 venue-section">
-            <div class="row">
-              <% @venues_search.each do |venue|%>
-                <div class="event-card">
-                    <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
-                    <div class="card-trip-infos">
-                    <h2><%= venue.events.name %></h2>
-                    <h3><%= venue.name %></h3>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                    </div>
-                    <!-- iterate through users who are logged in -->
-                    <div class="users-online">
-                    <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
-                    </div>
+<!--   search result layout
+ -->
+    <div class="container mt-3 venue-section">
+        <div class="row">
+          <% @venues_search.each do |venue|%>
+            <div class="event-card">
+              <% if venue.events != nil %>
+                <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
+                <div class="card-trip-infos">
+                <h2><%= link_to venue.name, venue_path(venue) %></h2>
+                <h3><%= venue.events.last.name %></h3>
+                <!--star ratings -->
+                <% full_stars = venue.events.last.average_rating.round %>
+                <% empty_stars = 5 - full_stars %>
+                <% full_stars.times do %>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <% end %>
+                <% empty_stars.times do %>
+                  <i class="far fa-star"></i>
+                <% end %>
+                 (<%= venue.events.last.ratings.count %>)
+                <!-- iterate through users who are logged in -->
+              <% elsif venue.events.nil? %>
+                <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
+                <h3><%= venue.name %></h3>
+                <p>no event at the moment</p>
                 </div>
               <% end %>
+            <% end %>
+
+              <div class="users-online">
+                <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+              </div>
             </div>
         </div>
+    </div>
 <% end %>
 <!--stars, in ratings controller add methods to calculate/round full,empty stars from the ratings of the user -->
 <!-- avatar, in livefeed controller add method to get users currently live, iterate and call .each on them in view  -->
