--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -2,5 +2,19 @@
   <h2><%= @venue.name %></h2>
   <p><%= @venue.description%></p>
   <p>Event.raitings goes here</p>
-  <p>Live event box, music, timeleft</p>
+  <p>Live event box, music, timeleft</ps>
 </div>
+
+<br>
+
+
+<div id="messages" data-chatroom-id="<%= @chatroom.id %>">
+  <% @chatroom.messages.each do |message| %>
+    <%= render 'messages/message', message: message %>
+  <% end %>
+</div>
+
+<%= simple_form_for [ @venue, @message ], remote: true do |f| %>
+  <%= f.input :content, label: false, placeholder: "Share the information~" %>
+  <%= f.submit "Submit" %>
+<% end %>
