--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,6 +1,7 @@
 <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%=cl_image_path @venue.photos[0].key %>)">
   <h2><%= @venue.name %></h2>
   <p><%= @venue.description%></p>
+  <%raise %>
   <p>Event.raitings goes here</p>
   <p>Live event box, music, timeleft</p>
   <a href="https://api.deezer.com/oembed?url=http://www.deezer.com/track/3135556"></a>
