--- a/app/assets/stylesheets/pages/_venue_show.scss
+++ b/app/assets/stylesheets/pages/_venue_show.scss
@@ -24,3 +24,9 @@
   margin: 0;
   text-align: center;
 }
+.avatar-map{
+  width: 30px !important;
+  border-radius: 50px;
+  box-shadow:0 1px 2px rgba(0, 0, 0, 0.2);
+  border:white 1px solid;
+}
