--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -124,6 +124,10 @@
             </div>
         </div>
     </div>
+    <div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
 <% end %>
 <!--stars, in ratings controller add methods to calculate/round full,empty stars from the ratings of the user -->
 <!-- avatar, in livefeed controller add method to get users currently live, iterate and call .each on them in view  -->
