I'm fighting fetching API data

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <body>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
-
     <%= yield %>
+    <script src="https://cdns-files.dzcdn.net/js/min/dz.js"></script>
   </body>
 </html>
