--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,7 +1,9 @@
 <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%=cl_image_path @venue.photos[0].key %>)">
   <h2><%= @venue.name %></h2>
   <p><%= @venue.description%></p>
-  <p>Event.raitings goes here</p>
+  <p> Event raitings goes here</p>
+  <p> <%= @venue.events.last.name %></p>
+  <p id="results"></p>
 </div>
 
 <br>
@@ -16,3 +18,5 @@
   <%= f.input :content, label: false, placeholder: "Share the information~" %>
   <%= f.submit "Submit" %>
 <% end %>
+
+
