--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -57,7 +57,7 @@
           <% @venues.each do |venue|%>
             <div class="event-card">
               <% if venue.events != nil %>
-                <%#= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
+                <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
                 <div class="card-trip-infos">
                 <h2><%= link_to venue.name, venue_path(venue) %></h2>
                 <h3><%= venue.events.last.name %></h3>
@@ -98,7 +98,7 @@
           <% @venues_search.each do |venue|%>
             <div class="event-card">
               <% if venue.events != nil %>
-                <%#= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
+                <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
                 <div class="card-trip-infos">
                 <h2><%= link_to venue.name, venue_path(venue) %></h2>
                 <h3><%= venue.events.last.name %></h3>
@@ -116,6 +116,16 @@
                 <% uncrowded.times do %>
                   <i class="far fa-user"></i>
                 <% end %>
+
+                <div class="tempo">
+                  <input
+                    type="range"
+                    class="tempo-slider"
+                    max="10"
+                    min="0"
+                    value="<%= crowded %>"
+                  />
+                </div>
 
               <% elsif venue.events.nil? %>
                 <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
