--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -71,8 +71,11 @@
                   <i class="far fa-star"></i>
                 <% end %>
                  (<%= venue.events.last.ratings.count %>)
+                <div class="users-online">
+                  <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+                </div>
                 <!-- iterate through users who are logged in -->
-              <% elsif venue.events.nil? %>
+              <% elsif venue.events.empty? %>
                 <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
                 <h3><%= venue.name %></h3>
                 <p>no event at the moment</p>
@@ -93,7 +96,7 @@
     <div class="container mt-3 venue-section">
         <div class="row">
           <div class = "search-result-title">
-            <h3> <%= @venues_search.length %> Venues available<h3>
+            <h3> <%= @venues_search.length %> Venues identified!<h3>
           </div>
           <% @venues_search.each do |venue|%>
             <div class="event-card">
@@ -133,11 +136,14 @@
                 <p>no event at the moment</p>
                 </div>
               <% end %>
+            <div class="users-online">
+              <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
+            </div>
+            <div class="social-icons">
+              <i class="fas fa-share-alt"></i>
+              <i class="far fa-heart"></i>
+            </div>
           <% end %>
-
-              <div class="users-online">
-                <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
-              </div>
             </div>
         </div>
     </div>
