--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -73,7 +73,7 @@
                  (<%= venue.events.last.ratings.count %>)
                 <!-- iterate through users who are logged in -->
               <% elsif venue.events.nil? %>
-                <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
+                <%#= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
                 <h3><%= venue.name %></h3>
                 <p>no event at the moment</p>
                 </div>
@@ -118,7 +118,7 @@
                 <% end %>
 
               <% elsif venue.events.nil? %>
-                <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
+                <%#= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
                 <h3><%= venue.name %></h3>
                 <p>no event at the moment</p>
                 </div>
