--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -57,7 +57,7 @@
           <% @venues.each do |venue|%>
             <div class="event-card">
               <% if venue.events != nil %>
-                <%#= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
+                <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
                 <div class="card-trip-infos">
                 <h2><%= link_to venue.name, venue_path(venue) %></h2>
                 <h3><%= venue.events.last.name %></h3>
@@ -98,7 +98,7 @@
           <% @venues_search.each do |venue|%>
             <div class="event-card">
               <% if venue.events != nil %>
-                <%#= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
+                <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
                 <div class="card-trip-infos">
                 <h2><%= link_to venue.name, venue_path(venue) %></h2>
                 <h3><%= venue.events.last.name %></h3>
@@ -106,7 +106,7 @@
                 <i class="far fa-user"></i><p> Capacity: <%= venue.capacity %></p>
                 <!-- waiting time -->
                 <i class="far fa-clock"></i><p> Waiting Time: <%= venue.events.last.waiting_time_now %> </p>
-                
+
                 <!-- crowd level -->
                 <% crowded = venue.events.last.average_crowded_level.round %>
                 <% uncrowded = 10 - venue.events.last.average_crowded_level.round %>
