Music plugin added

--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -3,7 +3,9 @@
   <p><%= @venue.description%></p>
   <p> Event raitings goes here</p>
   <p> <%= @venue.events.last.name %></p>
-  <p id="results"></p>
+  <div class="container">
+    <iframe src="https://open.spotify.com/embed/album/1DFixLWuPkv3KT3TnV35m3" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+  </div>
 </div>
 
 <br>
