--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -5,6 +5,9 @@
   <p> <%= @venue.events.last.name %></p>
   <div class="container">
     <iframe src="https://open.spotify.com/embed/album/1DFixLWuPkv3KT3TnV35m3" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay
+    src="https%3A//api.soundcloud.com/tracks/293&amp">
+</iframe>
   </div>
 </div>
 
