--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -27,6 +27,7 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
+        <!-- slider for choosing crowded level-->
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h4 class="modal-title">how crowded is the place?</h4>
         </div>
