--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,156 +1,129 @@
-<div class="container mt-5">
-  <%= simple_form_for :search, method: "GET" do |f| %>
-    <%= f.input :category, as: :string, type: :text, :placeholder => "Type here", :label => false %>
-  <% end %>
-</div>
+
 
 
 <!-- container for orange background -->
 <% if @search_query.nil? || @search_query.empty? %>
-  <div class="container">
-
-    <div header-container>
-    <!-- navigation bar -->
-
-    <!-- avatar -->
-    <img class="avatar" alt="avatar" src="https://kitt.lewagon.com/placeholder/users/cveneziani" />
-
-
-    <!-- title -->
-
-    <h1>Hello, John !<h1>
-    <h2>Where would you like to go</h2>
-
-    <!-- filtering and searchbox -->
-
-      <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Dropdown button
-      </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Near-by</a>
-          <a class="dropdown-item" href="#">Another </a>
-        </div>
+<div class="container_orange orange">
+  <div class="container header-index">
+      <h2>Where would<br>you like to go?</h2>
+      <div class="mt-3 w-100">
+        <%= simple_form_for :search, method: "GET" do |f| %>
+          <%= f.input :category, as: :string, type: :text, :placeholder => "Type here", :label => false, input_html: { class: 'search_input' } %>
+        <% end %>
       </div>
-    <!-- container end, apply border-radius to bottom onl -->
-    </div>
-    <!-- filter tabs -->
-    <div class="container mt-3 tabs-and-event-cards">
-        <div class="filter-tabs">
-        <ul class="list-inline tabs-underlined">
-            <li>
-            <a href="#" class="tab-underlined active">Venues</a>
-            </li>
-            <li>
-            <a href="#" class="tab-underlined">Events</a>
-            </li>
-            <li>
-            <a href="#" class="tab-underlined">Promotions</a>
-            </li>
-        </ul>
-        </div>
-
-<!-- cards -->
-  <!-- iterate through venue cards with events -->
-    <div class="container mt-3 venue-section">
-        <div class="row">
-          <% @venues.each do |venue|%>
-            <div class="event-card">
-              <% if venue.events != nil %>
-                <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
-                <div class="card-trip-infos">
-                <h2><%= link_to venue.name, venue_path(venue) %></h2>
-                <h3><%= venue.events.last.name %></h3>
-                <!--star ratings -->
-                <% full_stars = venue.events.last.average_rating.round %>
-                <% empty_stars = 5 - full_stars %>
-                <% full_stars.times do %>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <% end %>
-                <% empty_stars.times do %>
-                  <i class="far fa-star"></i>
-                <% end %>
-                 (<%= venue.events.last.ratings.count %>)
-                <div class="users-online">
-                  <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
-                </div>
-                <!-- iterate through users who are logged in -->
-              <% elsif venue.events.empty? %>
-                <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
-                <h3><%= venue.name %></h3>
-                <p>no event at the moment</p>
-                </div>
-              <% end %>
-            <% end %>
-
-              <div class="users-online">
-                <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
-              </div>
-            </div>
-        </div>
-    </div>
   </div>
+</div>
+
+<div class="container mt-3 tabs-and-event-cards ml-2">
+  <div class="filter-tabs">
+    <ul class="list-inline tabs-underlined d-flex">
+        <li>
+        <a href="#" class="tab-underlined mr-3 active">Venues</a>
+        </li>
+        <li>
+        <a href="#" class="tab-underlined mr-3">Events</a>
+        </li>
+        <li>
+        <a href="#" class="tab-underlined mr-3">Promotions</a>
+        </li>
+    </ul>
+    </div>
+</div>
+<!-- cards -->
+<div class="container mt-3">
+  <div class="row">
+    <% @venues.each do |venue|%>
+    <% if venue.events != nil %>
+    <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)), url(<%=cl_image_path venue.photos[0].key %>)">
+      <div class="card-trip-infos">
+        <h2><%= link_to venue.name, venue_path(venue) %></h2>
+        <h6><%= venue.events.last.name %></h6>
+        <% full_stars = venue.events.last.average_rating.round %>
+        <% empty_stars = 5 - full_stars %>
+
+        <% full_stars.times do %>
+          <i class="fa fa-star orange" aria-hidden="true"></i>
+        <% end %>
+
+        <% empty_stars.times do %>
+          <i class="fa fa-star" aria-hidden="true"></i>
+        <% end %>
+
+         (<%= venue.events.last.ratings.count %>)
+      </div>
+    </div>
+
+    <% elsif venue.events.empty? %>
+      <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)), url(<%=cl_image_path venue.photos[0].key %>)">
+      <h3><%= venue.name %></h3>
+      <p>no event at the moment</p>
+      </div>
+    <% end %>
+    <% end %>
+  </div>
+</div>
 <% else %>
 <!--   search result layout -->
+<div class="container_orange orange">
+  <div class="container header-index">
+      <h3><%= @venues_search.length %> Venues Identified!</h3>
+  </div>
+</div>
 
-    <div class="container mt-3 venue-section">
-        <div class="row">
-          <div class = "search-result-title">
-            <h3> <%= @venues_search.length %> Venues identified!<h3>
-          </div>
-          <% @venues_search.each do |venue|%>
-            <div class="event-card">
-              <% if venue.events != nil %>
-                <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
-                <div class="card-trip-infos">
-                <h2><%= link_to venue.name, venue_path(venue) %></h2>
-                <h3><%= venue.events.last.name %></h3>
-                <!-- capacity -->
-                <i class="far fa-user"></i><p> Capacity: <%= venue.capacity %></p>
-                <!-- waiting time -->
-                <i class="far fa-clock"></i><p> Waiting Time: <%= venue.events.last.waiting_time_now %> </p>
-
-                <!-- crowd level -->
-                <% crowded = venue.events.last.average_crowded_level.round %>
-                <% uncrowded = 10 - venue.events.last.average_crowded_level.round %>
-                <% crowded.times do %>
-                  <i class="fas fa-user"></i>
-                <% end %>
-                <% uncrowded.times do %>
-                  <i class="far fa-user"></i>
-                <% end %>
-
-                <div class="tempo">
-                  <input
-                    type="range"
-                    class="tempo-slider"
-                    max="10"
-                    min="0"
-                    value="<%= crowded %>"
-                  />
-                </div>
-
-              <% elsif venue.events.nil? %>
-                <%= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "w-100" %>
-                <h3><%= venue.name %></h3>
-                <p>no event at the moment</p>
-                </div>
-              <% end %>
-            <div class="users-online">
-              <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
-            </div>
-            <div class="social-icons">
-              <i class="fas fa-share-alt"></i>
-              <i class="far fa-heart"></i>
-            </div>
-          <% end %>
-            </div>
-        </div>
+<div class="container mt-3 tabs-and-event-cards ml-2">
+  <div class="filter-tabs">
+    <ul class="list-inline tabs-underlined d-flex">
+        <li>
+        <a href="#" class="tab-underlined mr-3 active">Venues</a>
+        </li>
+        <li>
+        <a href="#" class="tab-underlined mr-3">Events</a>
+        </li>
+        <li>
+        <a href="#" class="tab-underlined mr-3">Promotions</a>
+        </li>
+    </ul>
     </div>
+</div>
+<!-- cards -->
+<div class="container mt-3">
+  <div class="row">
+    <% @venues_search.each do |venue|%>
+    <% if venue.events != nil %>
+    <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)), url(<%=cl_image_path venue.photos[0].key %>)">
+      <div class="card-trip-infos">
+        <h2><%= link_to venue.name, venue_path(venue) %></h2>
+        <h6><%= venue.events.last.name %></h6>
+        <% full_stars = venue.events.last.average_rating.round %>
+        <% empty_stars = 5 - full_stars %>
+
+        <% full_stars.times do %>
+          <i class="fa fa-star orange" aria-hidden="true"></i>
+        <% end %>
+
+        <% empty_stars.times do %>
+          <i class="fa fa-star" aria-hidden="true"></i>
+        <% end %>
+
+         (<%= venue.events.last.ratings.count %>)
+      </div>
+    </div>
+
+    <% elsif venue.events.empty? %>
+      <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)), url(<%=cl_image_path venue.photos[0].key %>)">
+      <h3><%= venue.name %></h3>
+      <p>no event at the moment</p>
+      </div>
+    <% end %>
+    <% end %>
+  </div>
+</div>
+  <div class="container">
     <div id="map"
      style="width: 100%; height: 600px;"
      data-markers="<%= @markers.to_json %>"
      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+  </div>
 <% end %>
 <!--stars, in ratings controller add methods to calculate/round full,empty stars from the ratings of the user -->
 <!-- avatar, in livefeed controller add method to get users currently live, iterate and call .each on them in view  -->
