--- a/app/assets/stylesheets/pages/_venue_show.scss
+++ b/app/assets/stylesheets/pages/_venue_show.scss
@@ -36,10 +36,11 @@
 }
 
 .card-product {
+  margin: 0 20px;
   overflow: hidden;
   height: 50px;
   background: black;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center;
 }
@@ -57,13 +58,47 @@
 }
 
 .card-product p {
-  font-size: 12px;
+  font-size: 10px;
   line-height: 1.4;
-  opacity: .7;
+  opacity: 0.7;
   margin-bottom: 0;
-  margin-top: 8px;
+  margin-top: 0px;
+  font-weight: 500;
 }
 
 .card-product .card-product-infos {
+  margin: 0 auto;
   padding: 16px;
+  h2 {
+    padding-top: 5px;
+  }
+}
+
+.input {
+  .form-control {
+    width: 75vw !important;
+  }
+  .btn {
+    margin-top: -16px;
+    font-size: 12px;
+    padding: 8px 20px;
+  }
+}
+
+.message-area {
+  position: absolute;
+  bottom: 10px;
+}
+.btn-show {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+}
+
+.wrap-show {
+  background-color: white;
+  height: 60vh;
+  border-radius: 30px 30px 0 0;
+  padding-top: 30px;
+  padding-left: 10px;
 }
