--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,5 +1,6 @@
 
 
+<div class="wrap">
 
 <!-- container for orange background -->
 <% if @search_query.nil? || @search_query.empty? %>
@@ -8,13 +9,13 @@
       <h2>Where would<br>you like to go?</h2>
       <div class="mt-3 w-100">
         <%= simple_form_for :search, method: "GET" do |f| %>
-          <%= f.input :category, as: :string, type: :text, :placeholder => "Type here", :label => false, input_html: { class: 'search_input' } %>
+          <%= f.input :category, as: :string, type: :text, :placeholder => "Type here!", :label => false, input_html: { class: 'search_input' } %>
         <% end %>
       </div>
   </div>
 </div>
 
-<div class="container mt-3 tabs-and-event-cards ml-2">
+<div class="container mt-3 tabs-and-event-cards ml-3">
   <div class="filter-tabs">
     <ul class="list-inline tabs-underlined d-flex">
         <li>
@@ -30,11 +31,14 @@
     </div>
 </div>
 <!-- cards -->
-<div class="container mt-3">
+<div class="container mt-3 d-flex cards-container">
   <div class="row">
     <% @venues.each do |venue|%>
     <% if venue.events != nil %>
     <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)), url(<%=cl_image_path venue.photos[0].key %>)">
+      <div class="go_next">
+        <a><i class='fas fa-chevron-right'></i></a>
+      </div>
       <div class="card-trip-infos">
         <h2><%= link_to venue.name, venue_path(venue) %></h2>
         <h6><%= venue.events.last.name %></h6>
@@ -70,65 +74,105 @@
   </div>
 </div>
 
-<div class="container mt-3 tabs-and-event-cards ml-2">
+
+<div class="container mt-3 tabs-and-event-cards ml-3">
   <div class="filter-tabs">
-    <ul class="list-inline tabs-underlined d-flex">
+    <ul class="nav nav-t list-inline tabs-underlined d-flex">
+        <li class="mr-3"><a class="active" data-toggle="tab" href="#Pending">Cards</a></li>
+         <li class="mr-3"><a data-toggle="tab" href="#Approved">Map</a></li>
         <li>
-        <a href="#" class="tab-underlined mr-3 active">Venues</a>
+        <a href="#" class="tab-underlined mr-3">Venues</a>
         </li>
-        <li>
+   <!--      <li>
         <a href="#" class="tab-underlined mr-3">Events</a>
-        </li>
+        </li> -->
         <li>
         <a href="#" class="tab-underlined mr-3">Promotions</a>
         </li>
     </ul>
-    </div>
+  </div>
 </div>
 <!-- cards -->
-<div class="container mt-3">
+<div class="tab-content">
+<div class="container mt-3 my-listing-section tab-pane fade in active show" id="Pending">
   <div class="row">
     <% @venues_search.each do |venue|%>
     <% if venue.events != nil %>
-    <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.8)), url(<%=cl_image_path venue.photos[0].key %>)">
+<!--     <div class="event-card-search">
+      <div class="image">
+        <%#= cl_image_tag venue.photos[0].key, height:220, crop: :fill, class: "image_search w-100" %>
+      </div>
       <div class="card-trip-infos">
-        <h2><%= link_to venue.name, venue_path(venue) %></h2>
-        <h6><%= venue.events.last.name %></h6>
-        <% full_stars = venue.events.last.average_rating.round %>
-        <% empty_stars = 5 - full_stars %>
+        <h2><%#= link_to venue.name, venue_path(venue) %></h2>
+        <h6><%#= venue.events.last.name %></h6>
+        <div class="star_area d-flex align-items-center">
+          <%# full_stars = venue.events.last.average_rating.round %>
+          <%# empty_stars = 5 - full_stars %>
 
-        <% full_stars.times do %>
-          <i class="fa fa-star orange" aria-hidden="true"></i>
-        <% end %>
+          <%# full_stars.times do %>
+            <i class="fa fa-star orange" aria-hidden="true"></i>
+          <%# end %>
 
-        <% empty_stars.times do %>
-          <i class="fa fa-star" aria-hidden="true"></i>
-        <% end %>
-
-         (<%= venue.events.last.ratings.count %>)
+          <%# empty_stars.times do %>
+            <i class="fa fa-star" aria-hidden="true"></i>
+          <%# end %>
+          <div class="small_count ml-1">
+           (<%= venue.events.last.ratings.count %>)
+          </div>
+        </div>
       </div>
-    </div>
+    </div> -->
 
-    <% elsif venue.events.empty? %>
-      <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)), url(<%=cl_image_path venue.photos[0].key %>)">
-      <h3><%= venue.name %></h3>
-      <p>no event at the moment</p>
+      <div class="event-card-search d-flex align-items-center">
+        <div class="card-1">
+          <%= cl_image_tag venue.photos[0].key, height:150, crop: :fill, class: "image_search w-100" %>
+        </div>
+        <div class="card-info">
+          <h2><%= link_to venue.name, venue_path(venue) %></h2>
+          <h6><%= venue.events.last.name %></h6>
+          <div class="capacity align-items-center">
+            <p> Capacity:</p>
+            <p class="bold">&nbsp;<%= venue.capacity %></p>
+          </div>
+          <div class="capacity align-items-center">
+            <p> Waiting Time:</p>
+            <p class="bold">&nbsp;<%= venue.events.last.waiting_time_now %> </p>
+          </div>
+          <div class="crowd_level">
+            <% crowded = venue.events.last.average_crowded_level.round %>
+            <% uncrowded = 10 - venue.events.last.average_crowded_level.round %>
+            <% crowded.times do %>
+              <i class="fas fa-user"></i>
+            <% end %>
+            <% uncrowded.times do %>
+              <i class="far fa-user"></i>
+            <% end %>
+          </div>
+        </div>
       </div>
+
+      <% elsif venue.events.empty? %>
+        <div class="event-card" style= "background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.5)), url(<%=cl_image_path venue.photos[0].key %>)">
+        <h3><%= venue.name %></h3>
+        <p>no event at the moment</p>
+        </div>
     <% end %>
     <% end %>
   </div>
 </div>
-  <div class="container">
-    <div id="map"
-     style="width: 100%; height: 600px;"
-     data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+  <div class="container my-listing-section tab-pane fade" id="Approved">
+      <div id="map"
+       style="width: 100%; height: 600px;"
+       data-markers="<%= @markers.to_json %>"
+       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
   </div>
+</div>
 <% end %>
 <!--stars, in ratings controller add methods to calculate/round full,empty stars from the ratings of the user -->
 <!-- avatar, in livefeed controller add method to get users currently live, iterate and call .each on them in view  -->
 
 
+</div>
 
 
 
