--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -3,50 +3,54 @@
   <p><%= @venue.description%></p>
   <h2> <%= @venue.events.last.name %></h2>
   <p> <strong>now playing</strong></p>
-  <div class="card-product">
-  <img src=<%= @playlist_data["tracks"]["data"][2]['album']['cover_medium']%>>
-  <div class="card-product-infos mt-3">
-    <h2><%= @playlist_data["tracks"]["data"][2]['artist']['name']%></h2>
-    <p><%= @playlist_data["tracks"]["data"][2]['album']['title']%></p>
+  <div class="card-product mt-3">
+    <img src=<%= @playlist_data["tracks"]["data"][2]['album']['cover_medium']%>>
+    <div class="card-product-infos">
+      <h2><%= @playlist_data["tracks"]["data"][2]['artist']['name']%></h2>
+      <p><%= @playlist_data["tracks"]["data"][2]['album']['title']%></p>
+    </div>
   </div>
-</div>
 
 </div>
 
 <br>
-<div class="container">
-  <div id="messages" data-chatroom-id="<%= @chatroom.id %>">
-    <% @chatroom.messages.each do |message| %>
-      <%= render 'messages/message', message: message %>
-    <% end %>
-  </div>
-
-  <div class="btn-show btn btn-primary" data-venue="<%= @venue.id %>" data-toggle="modal" data-target="#myModal">Live now</div>
-
-    <div class="modal fade" id="myModal" role="dialog">
-      <div class="modal-dialog">
-
-        <!-- Modal content-->
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">how crowded is the place?</h4>
-          </div>
-          <div class="modal-body">
-            <p>1, 2, 3, 4, 5, 6, 7, 8, 9, 10</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          </div>
-        </div>
-
-      </div>
+<div class="wrap-show">
+  <div class="container">
+    <div id="messages" data-chatroom-id="<%= @chatroom.id %>">
+      <% @chatroom.messages.each do |message| %>
+        <%= render 'messages/message', message: message %>
+      <% end %>
     </div>
 
-  <div class="message-area">
-    <%= simple_form_for [ @venue, @message ], remote: true do |f| %>
-      <%= f.input :content, label: false, placeholder: "Share the information~" %>
-      <%= f.submit "Submit" %>
-    <% end %>
+    <div class="btn-show btn btn-primary w-100" data-venue="<%= @venue.id %>" data-toggle="modal" data-target="#myModal">Live now</div>
+
+      <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">how crowded is the place?</h4>
+            </div>
+            <div class="modal-body">
+              <p>1, 2, 3, 4, 5, 6, 7, 8, 9, 10</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    <div class="message-area">
+      <%= simple_form_for [ @venue, @message ], remote: true do |f| %>
+      <div class="input d-flex align-items-center">
+        <%= f.input :content, label: false, placeholder: "Share the information~", class: "w-100" %>
+          <%= f.submit "Send", class: "btn btn-primary" %>
+      </div>
+      <% end %>
+    </div>
   </div>
 </div>
