--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,5 @@
 @import "components/index";
 @import "pages/index";
 @import 'mapbox-gl/dist/mapbox-gl';
+
+@import "jquery-bar-rating/dist/themes/css-stars";
