--- a/app/assets/stylesheets/pages/_search_result.scss
+++ b/app/assets/stylesheets/pages/_search_result.scss
@@ -9,7 +9,7 @@
   border-radius: 15px;
   position: relative;
   background-color: white;
-
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
   .card-info {
     padding: 0 10px 0 15px;
     margin: 0 auto;
@@ -34,8 +34,9 @@
   }
   h6 {
     color: black;
-    margin-bottom: 0;
+    margin-bottom: 10px;
     font-size: 12px;
+    margin-top: -5px;
   }
 
   [aria-hidden="true"] {
@@ -54,6 +55,7 @@
 }
 
 .crowd_level {
+  margin-top: -4px;
   i {
     font-size: 8px;
     margin: 0 -1px;
