--- a/app/assets/stylesheets/pages/_venue_show.scss
+++ b/app/assets/stylesheets/pages/_venue_show.scss
@@ -1,13 +1,20 @@
 .card-category {
   background-size: cover;
   background-position: center;
-  height: 210px;
+  height: 330px;
   justify-content: center;
   align-items: center;
   color: white;
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+
+  h1 {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 32px;
+    font-weight: 600;
+  }
 }
 
 .card-category h2 {
@@ -19,10 +26,12 @@
 }
 
 .card-category p {
-  font-size: 12px;
-  opacity: 0.7;
+  font-size: 13px;
+  opacity: 0.8;
   margin: 0;
   text-align: center;
+  font-weight: 500;
+  padding: 0 30px;
 }
 .avatar-map {
   width: 30px !important;
@@ -75,30 +84,67 @@
 }
 
 .input {
+  margin-left: 10px;
   .form-control {
     width: 75vw !important;
+    height: 50px;
+    border-radius: 10px 0 0 10px;
   }
   .btn {
     margin-top: -16px;
-    font-size: 12px;
-    padding: 8px 20px;
+    font-size: 14px;
+    padding: 15px 20px;
+    border-radius: 0 10px 10px 0;
   }
 }
 
 .message-area {
   position: absolute;
-  bottom: 10px;
+  bottom: 0;
+  right: 8px;
 }
 .btn-show {
   position: absolute;
   bottom: 10px;
-  left: 0;
+  right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 17px;
+  font-weight: 600;
+  border-radius: 10px;
+  letter-spacing: 1px;
 }
 
 .wrap-show {
   background-color: white;
-  height: 60vh;
+  height: 65vh;
   border-radius: 30px 30px 0 0;
-  padding-top: 30px;
-  padding-left: 10px;
+  margin-top: -26px;
+}
+
+.w-95 {
+  width: 95%;
+}
+.message-column {
+  a {
+    font-size: 12px;
+    opacity: 0.4;
+  }
+  p {
+    margin-bottom: 0;
+  }
+  .image img {
+    width: 30px;
+  }
+}
+
+.message-container {
+  padding: 10px 0;
+}
+.back-btn {
+  margin-left: 20px;
+  padding-top: 20px;
+  i {
+    font-size: 25px;
+  }
 }
