--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,20 +1,27 @@
-<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%=cl_image_path @venue.photos[0].key %>)">
-  <h2><%= @venue.name %></h2>
-  <p><%= @venue.description%></p>
-  <h2> <%= @venue.events.last.name %></h2>
-  <p> <strong>now playing</strong></p>
-  <div class="card-product mt-3">
-    <img src=<%= @playlist_data["tracks"]["data"][2]['album']['cover_medium']%>>
-    <div class="card-product-infos">
-      <h2><%= @playlist_data["tracks"]["data"][2]['artist']['name']%></h2>
-      <p><%= @playlist_data["tracks"]["data"][2]['album']['title']%></p>
+<div class="wrap-show-first">
+
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.8)), url(<%=cl_image_path @venue.photos[0].key %>)">
+    <%= link_to :back do %>
+    <div class="back-btn">
+      <i class="fa fa-arrow-left btn" aria-hidden="true"></i>
     </div>
+    <% end %>
+    <h1><%= @venue.name %></h1>
+    <p><%= @venue.description%></p>
+    <p class="mt-2"> <strong>Now playing</strong></p>
+    <div class="card-product mt-3">
+      <img src=<%= @playlist_data["tracks"]["data"][2]['album']['cover_medium']%>>
+      <div class="card-product-infos">
+        <h2><%= @playlist_data["tracks"]["data"][2]['artist']['name']%></h2>
+        <p><%= @playlist_data["tracks"]["data"][2]['album']['title']%></p>
+      </div>
+    </div>
+
   </div>
 
 </div>
 
-<br>
-<div class="wrap-show">
+ <div class="wrap-show pt-5">
   <div class="container">
     <div id="messages" data-chatroom-id="<%= @chatroom.id %>">
       <% @chatroom.messages.each do |message| %>
@@ -22,7 +29,7 @@
       <% end %>
     </div>
 
-    <div class="btn-show btn btn-primary w-100" data-venue="<%= @venue.id %>" data-toggle="modal" data-target="#myModal">Live now</div>
+    <div class="btn-show btn btn-primary w-95" data-venue="<%= @venue.id %>" data-toggle="modal" data-target="#myModal">GO LIVE</div>
 
       <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
