--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,4 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
-@import 'mapbox-gl/dist/mapbox-gl';
-
-@import "jquery-bar-rating/dist/themes/css-stars";
+@import 'mapbox-gl/dist/mapbox-gl'
