--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -42,7 +42,7 @@
       <div class="card-trip-infos">
         <h2><%= link_to venue.name, venue_path(venue) %></h2>
         <h6><%= venue.events.last.name %></h6>
-        <% full_stars = venue.events.last.average_rating.round %>
+        <% full_stars = venue.events.last.average_rating %>
         <% empty_stars = 5 - full_stars %>
 
         <% full_stars.times do %>
@@ -53,7 +53,7 @@
           <i class="fa fa-star" aria-hidden="true"></i>
         <% end %>
 
-         (<%= venue.events.last.ratings.count %>)
+         (<%= venue.events.last.ratings %>)
       </div>
     </div>
 
@@ -130,6 +130,18 @@
           <h2><%= link_to venue.name, venue_path(venue) %></h2>
           <h6><%= venue.events.last.name %></h6>
           <div class="capacity align-items-center">
+            <% full_stars = venue.events.last.average_rating %>
+            <% empty_stars = 5 - full_stars %>
+
+            <% full_stars.times do %>
+            <i class="fa fa-star orange" aria-hidden="true"></i>
+            <% end %>
+            <% empty_stars.times do %>
+            <i class="fa fa-star" aria-hidden="true"></i>
+            <% end %>
+          </div>
+          <div class="capacity align-items-center">
+
             <p> Capacity:</p>
             <p class="bold">&nbsp;<%= venue.capacity %></p>
           </div>
