--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -34,20 +34,6 @@
       <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
 
-          <!-- Modal content-->
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title">how crowded is the place?</h4>
-            </div>
-            <div class="modal-body">
-              <p>1, 2, 3, 4, 5, 6, 7, 8, 9, 10</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
@@ -79,26 +65,27 @@
             </div>
           </div>
           
-
-
           <!-- slider for choosing crowded level-->
           <h4 class="modal-title">how crowded is the place?</h4>
           <div class=d-flex>
           <p>not crowded</p>
-            <input type="range" name="crowd_level" min="0" max="50" value="25" id="fader" 
-              step="10" list="volsettings"> <p>very crowded</p>
+            <input type="range" name="crowd_level" min="0" max="10" value="5" id="fader" 
+              step="1" list="volsettings"> <p>very crowded</p>
             <datalist id="volsettings">
               <option>0</option>
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+              <option>6</option>
+              <option>7</option>
+              <option>8</option>
+              <option>9</option>
               <option>10</option>
-              <option>20</option>
-              <option>30</option>
-              <option>40</option>
-              <option>50</option>
             </datalist>
             </div>
           
-
-
           <!-- slider for choosing waiting time-->
           <h4 class="modal-title">how long did you wait?</h4>
               <div class="form-row align-items-center">
@@ -106,12 +93,12 @@
                   <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
                   <select name="waiting_time" class="custom-select mr-sm-2" id="inlineFormCustomSelect">
                     <option selected>Choose...</option>
-                    <option value="1">no wait</option>
-                    <option value="2">5 min</option>
-                    <option value="3">10 min</option>
-                    <option value="4">15 min</option>
-                    <option value="5">30 min</option>
-                    <option value="5">30 min + </option>
+                    <option value="no wait">no wait</option>
+                    <option value="5 min">5 min</option>
+                    <option value="10 min">10 min</option>
+                    <option value="15 min">15 min</option>
+                    <option value="30 min">30 min</option>
+                    <option value="30 min+">30 min + </option>
                   </select>
                 </div>
               </div>
@@ -122,7 +109,6 @@
 
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
->>>>>>> 70bdfa75dbdfdfddcfa03fc0dd8380cd8a3f3b52
         </div>
       </div>
 
