added to venue show page waiting time, ratings, crowding etc.

--- a/app/assets/stylesheets/pages/_venue_show.scss
+++ b/app/assets/stylesheets/pages/_venue_show.scss
@@ -33,6 +33,12 @@
   font-weight: 500;
   padding: 0 30px;
 }
+
+.card-rating-display p {
+  margin-top: 5px;
+  text-align: center;
+}
+
 .avatar-map {
   width: 30px !important;
   border-radius: 50px;
