--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -126,3 +126,10 @@ input.empty {
 [aria-hidden="true"] {
   color: white;
 }
+
+.my-listing-section {
+  #map {
+    border-radius: 20px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  }
+}
