--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -3,7 +3,9 @@
     <div class="image mr-3">
       <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
     </div>
-
+    <% if message.photo.attached? %>
+      <%= cl_image_tag message.photo.key, height: 100, width: 200, crop: :fill %>
+    <% end %>
     <p class="flex-grow-1"><%= message.content %></p>
       <a><%= message.created_at.strftime("%l:%M%p") %></a>
   </div>
