--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -21,32 +21,20 @@
 
 </div>
 
- <div class="wrap-show pt-5">
-  <div class="container">
+<div class="wrap-show pt-5">
+  <div class="container msg-scroll">
     <div id="messages" data-chatroom-id="<%= @chatroom.id %>">
       <% @chatroom.messages.each do |message| %>
         <%= render 'messages/message', message: message %>
       <% end %>
     </div>
+  </div>
+</div>
 
     <div class="btn-show btn btn-primary w-95" data-venue="<%= @venue.id %>" data-toggle="modal" data-target="#myModal">GO LIVE</div>
 
       <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
-
-          <!-- Modal content-->
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title">how crowded is the place?</h4>
-            </div>
-            <div class="modal-body">
-              <p>1, 2, 3, 4, 5, 6, 7, 8, 9, 10</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-          </div>
 
       <!-- Modal content-->
       <div class="modal-content">
@@ -75,17 +63,17 @@
                     <input class="rating__input" name="stars" id="rating3-4" value=4 type="radio">
                     <label aria-label="5 stars" class="rating__label" for="rating3-5"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
                     <input class="rating__input" name="stars" id="rating3-5" value=5 type="radio">
-                </div>        
+                </div>
             </div>
           </div>
-          
+
 
 
           <!-- slider for choosing crowded level-->
           <h4 class="modal-title">how crowded is the place?</h4>
           <div class=d-flex>
           <p>not crowded</p>
-            <input type="range" name="crowd_level" min="0" max="50" value="25" id="fader" 
+            <input type="range" name="crowd_level" min="0" max="50" value="25" id="fader"
               step="10" list="volsettings"> <p>very crowded</p>
             <datalist id="volsettings">
               <option>0</option>
@@ -96,7 +84,7 @@
               <option>50</option>
             </datalist>
             </div>
-          
+
 
 
           <!-- slider for choosing waiting time-->
@@ -116,19 +104,24 @@
                 </div>
               </div>
               <input type="submit" value="Submit">
-        </form>   
+        </form>
 
+        </div>
         </div>
 
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
       </div>
+      </div>
 
     <div class="message-area">
       <%= simple_form_for [ @venue, @message ], remote: true do |f| %>
       <div class="input d-flex align-items-center">
         <%= f.input :content, label: false, placeholder: "Share the information~", class: "w-100" %>
+        <div class="photo-icon">
+          <%= f.input :photo, as: :file, input_html: { class: 'd-none' }, label_html: { class: 'upload-photo fa fa-camera'}, label: "" %>
+        </div>
           <%= f.submit "Send", class: "btn btn-primary" %>
       </div>
       <% end %>
