show front end upgrades

--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -42,33 +42,37 @@
 </div>
 
 <div class="wrap-show pt-5">
-    <div class="container">
-          <div class="capacity align-items-center">
+    <div class="show-item-container">
+      <div class="waiting-time-show">
         <i class="far fa-clock orange"></i>
         <p> Waiting Time:</p>
         <p class="bold">&nbsp;<%= @venue.events.last.waiting_time_now %> </p>
       </div>
-      <div class="capacity">
+      <div class="capacity-show">
         <i class="far fa-user orange"></i>
-        <p> Capacity: 0 - </p>
+        <p> Capacity: </p>
         <p class="bold">&nbsp;<%= @venue.capacity %> PAX</p>
         <% crowded = @venue.events.last.average_crowded_level.round %>
         <% uncrowded = 10 - @venue.events.last.average_crowded_level.round %>
+        <div class="progress">
+          <div class="progress-bar bg-danger" role="progressbar" style="width: <%= crowded*10%>%" aria-valuenow="<%= crowded*10%>" aria-valuemin="0" aria-valuemax="10"></div>
+          <div class="progress-bar bg-success" role="progressbar" style="width: <%= uncrowded*10%>%" aria-valuenow="<%= uncrowded*10%>" aria-valuemin="0" aria-valuemax="10"></div>
+        </div>
       </div>
-      <div class="progress">
-        <div class="progress-bar bg-danger" role="progressbar" style="width: <%= crowded*10%>%" aria-valuenow="<%= crowded*10%>" aria-valuemin="0" aria-valuemax="10"></div>
-        <div class="progress-bar bg-success" role="progressbar" style="width: <%= uncrowded*10%>%" aria-valuenow="<%= uncrowded*10%>" aria-valuemin="0" aria-valuemax="10"></div>
-      </div>
-      <div class="category">
+      <div class="category-show">
         <i class="fas fa-globe-americas orange"></i>
-        <p> Category: <%=@venue.category %></p>
+        <p> Category: </p>
+        <p class="text-secondary"> <%=@venue.category %></p>
       </div>
     </div>
   <div class="container msg-scroll">
+    <div class="border-container">
+    <h6><strong>LIVE FEED: </strong></h6>
     <div id="messages" data-chatroom-id="<%= @chatroom.id %>">
       <% @chatroom.messages.each do |message| %>
         <%= render 'messages/message', message: message %>
       <% end %>
+    </div>
     </div>
   </div>
 </div>
